--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
               <!-- Nuevo: muestra la imagen lay.png en lugar del texto -->
 <div class="position">
   <a href="#" class="player-link" data-player="Lay">
-    <img src="lay.png" alt="Lay" style="width:50px; height:50px; border-radius:50%;">
+    <img src="lay.png" alt="Lay" style="width:50px; height:50px; border-radius:50%; display:block; margin:0 auto;">
+    <span class="player-name">Lay</span>
   </a>
 </div>
               <div class="position"><a href="#" class="player-link" data-player="Kuki">Kuki</a></div>
