--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <div class="defense">
               <div class="position"><a href="#" class="player-link" data-player="Raul">Raul</a></div>
               <div class="position"><a href="#" class="player-link" data-player="Juan">Juan</a></div>
-              <div class="position"><a href="#" class="player-link" data-player="Alvaro">Alvaro</a></div>
+              <div class="position"><a href="#" class="player-link" data-player="Alvaro G">Alvaro G</a></div>
             </div>
             <div class="midfield">
               <!-- Nuevo: muestra la imagen lay.png en lugar del texto -->
@@ -428,7 +428,7 @@
       "Fran":  { team:"DRINK TEAM",    pos:"Portero" },
       "Raul":  { team:"DRINK TEAM",    pos:"Defensa" },
       "Juan":  { team:"DRINK TEAM",    pos:"Defensa" },
-      "Alvaro":{ team:"DRINK TEAM",    pos:"Defensa" },
+      "Alvaro G":{ team:"DRINK TEAM",    pos:"Defensa" },
       "Lay":   { team:"DRINK TEAM",    pos:"Mediocampista", img:"lay.png" },
       "Kuki":  { team:"DRINK TEAM",    pos:"Mediocampista" },
       "Nacho": { team:"DRINK TEAM",    pos:"Delantero" },
