--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Suburbios League</title>
+<!-- Favicon personalizado desde Imgur -->
+<link rel="icon" href="https://i.imgur.com/9Hx9mZ4.jpeg" type="image/jpeg">
   <link rel="manifest" href="manifest.json">
   <!-- Google Fonts: Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -419,6 +421,10 @@
         <strong>Equipo:</strong> <span id="modalTeam"></span><br>
         <strong>Posición:</strong> <span id="modalPosition"></span>
       </p>
+<div id="modalStats">
+  <h2>Estadísticas</h2>
+  <ul id="modalStatsList"></ul>
+</div>
           </div>
   </div>
 
