--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <tr class="borussia">
           <td class="team-name"><span class="color-indicator"></span>BORUSSIA DONUTS</td><td>1</td><td>2</td><td>1</td><td>3</td>
         </tr>
-         <tr class="recreativo">
+<tr class="recreativo">
           <td class="team-name"><span class="color-indicator"></span>RECREATIVO DE JUERGA</td><td>1</td><td>1</td><td>2</td><td>0</td>
         </tr>
  <tr class="drink-team">
@@ -455,7 +455,7 @@
       "Lay":   { team:"DRINK TEAM",    pos:"Mediocampista", img:"lay.png" },
       "Kuki":  { team:"DRINK TEAM",    pos:"Mediocampista" },
       "Nacho": { team:"DRINK TEAM",    pos:"Delantero" },
-      "Sami":  { team:"CEPILLA FC",    pos:"Portero" },
+      "Sami":  { team:"CEPILLA FC",    pos:"Portero", img:"sami.png" },
       "Marko": { team:"CEPILLA FC",    pos:"Defensa" },
       "HDG":   { team:"CEPILLA FC",    pos:"Defensa" },
       "Mariankas":{team:"CEPILLA FC",  pos:"Defensa"},
