--- a/index.html
+++ b/index.html
@@ -364,7 +364,12 @@
         <div class="card-header">CEPILLA FC</div>
         <div class="card-body">
           <div class="lineup">
-            <div class="position portero"><a href="#" class="player-link" data-player="Sami">Sami</a></div>
+            <div class="position">
+  <a href="#" class="player-link" data-player="Sami">
+    <img src="sami.png" alt="Sami" style="width:50px; height:50px; border-radius:50%; display:block; margin:0 auto;">
+    <span class="player-name">Sami</span>
+  </a>
+</div>
             <div class="defense">
               <div class="position"><a href="#" class="player-link" data-player="Marko">Marko</a></div>
               <div class="position"><a href="#" class="player-link" data-player="HDG">HDG</a></div>
