--- a/index.html
+++ b/index.html
@@ -292,18 +292,18 @@
       <thead>
         <tr><th>Equipo</th><th>PJ</th><th>GF</th><th>GC</th><th>PTS</th></tr>
       </thead>
-      <tbody>
-        <tr class="cepilla">
-          <td class="team-name"><span class="color-indicator"></span>CEPILLA FC</td><td>1</td><td>8</td><td>1</td><td>3</td>
-        </tr>
+       <tbody>
         <tr class="borussia">
-          <td class="team-name"><span class="color-indicator"></span>BORUSSIA DONUTS</td><td>1</td><td>2</td><td>1</td><td>3</td>
+          <td class="team-name"><span class="color-indicator"></span>BORUSSIA DONUTS</td><td>2</td><td>5</td><td>4</td><td>4</td>
         </tr>
-<tr class="recreativo">
-          <td class="team-name"><span class="color-indicator"></span>RECREATIVO DE JUERGA</td><td>1</td><td>1</td><td>2</td><td>0</td>
+      <tr class="recreativo">
+          <td class="team-name"><span class="color-indicator"></span>RECREATIVO DE JUERGA</td><td>2</td><td>5</td><td>3</td><td>3</td>
+        </tr>
+         <tr class="cepilla">
+          <td class="team-name"><span class="color-indicator"></span>CEPILLA FC</td><td>2</td><td>9</td><td>5</td><td>3</td>
         </tr>
  <tr class="drink-team">
-          <td class="team-name"><span class="color-indicator"></span>DRINK TEAM</td><td>1</td><td>1</td><td>8</td><td>0</td>
+          <td class="team-name"><span class="color-indicator"></span>DRINK TEAM</td><td>2</td><td>4</td><td>11</td><td>1</td>
         </tr>
       </tbody>
     </table>
@@ -342,7 +342,7 @@
             <div class="position portero"><a href="#" class="player-link" data-player="Fran">Fran</a></div>
             <div class="defense">
               <div class="position"><a href="#" class="player-link" data-player="Raul">Raul</a></div>
-              <div class="position"><a href="#" class="player-link" data-player="Juan">Juan</a></div>
+              <div class="position"><a href="#" class="player-link" data-player="Juan S">Juan S</a></div>
               <div class="position"><a href="#" class="player-link" data-player="Alvaro G">Alvaro G</a></div>
             </div>
             <div class="midfield">
@@ -396,7 +396,7 @@
             </div>
             <div class="midfield">
               <div class="position"><a href="#" class="player-link" data-player="Victor">Victor</a></div>
-              <div class="position"><a href="#" class="player-link" data-player="Juanma">Juanma</a></div>
+              <div class="position"><a href="#" class="player-link" data-player="Carlos F">Carlos F</a></div>
             </div>
             <div class="position delantero"><a href="#" class="player-link" data-player="Alex F.">Alex F.</a></div>
           </div>
@@ -455,7 +455,7 @@
     const profiles = {
       "Fran":  { team:"DRINK TEAM",    pos:"Portero" },
       "Raul":  { team:"DRINK TEAM",    pos:"Defensa" },
-      "Juan":  { team:"DRINK TEAM",    pos:"Defensa" },
+      "Juan S":  { team:"DRINK TEAM",    pos:"Defensa" },
       "Alvaro G":{ team:"DRINK TEAM",    pos:"Defensa" },
       "Lay":   { team:"DRINK TEAM",    pos:"Mediocampista", img:"lay.png" },
       "Kuki":  { team:"DRINK TEAM",    pos:"Mediocampista" },
@@ -472,7 +472,7 @@
       "Leo":   { team:"RECREATIVO DE JUERGA",pos:"Defensa"},
       "Robles":{ team:"RECREATIVO DE JUERGA",pos:"Defensa"},
       "Victor":{ team:"RECREATIVO DE JUERGA",pos:"Mediocampista"},
-      "Juanma":{ team:"RECREATIVO DE JUERGA",pos:"Mediocampista"},
+      "Carlos F":{ team:"RECREATIVO DE JUERGA",pos:"Mediocampista"},
       "Alex F.":{team:"RECREATIVO DE JUERGA",pos:"Delantero"},
       "Adri":  { team:"BORUSSIA DONUTS",pos:"Portero"},
       "Niko":  { team:"BORUSSIA DONUTS",pos:"Defensa"},
@@ -492,35 +492,48 @@
 // —– Reemplaza todo este bloque —–
 // Goles (orden descendente)
 const statsPlayers = [
+  { name: "Carlos F", color: "#FFD700", stat: 3 },
   { name: "HDG",    color: "#808080", stat: 3 },
+  { name: "Esteban",color: "#00CCCC", stat: 3 },
   { name: "Marko",  color: "#808080", stat: 2 },
-  { name: "Esteban",color: "#00CCCC", stat: 2 },
-  { name: "Victor", color: "#FFD700", stat: 1 },
-  { name: "Curro",  color: "#808080", stat: 1 },
+  { name: "Victor", color: "#FFD700", stat: 2 },
+  { name: "Curro",  color: "#808080", stat: 2 },
   { name: "Juan L", color: "#808080", stat: 1 },
-  { name: "Nestor", color: "#808080", stat: 1 }
+  { name: "Nestor", color: "#808080", stat: 1 },
+  { name: "Lay", color: "#800080", stat: 1 },
+  { name: "Álvaro G", color: "#800080", stat: 1 },
+  { name: "Álvaro", color: "#00CCCC", stat: 1 },
+  { name: "Alcaina", color: "#00CCCC", stat: 1 }
+
 ];
 
 // Asistencias (orden descendente)
 const assistPlayers = [
   { name: "Nestor", color: "#808080", stat: 3 },
-  { name: "Juan L", color: "#808080", stat: 2 },
+  { name: "Juan L", color: "#808080", stat: 3 },
+  { name: "Víctor",    color: "#FFD700", stat: 2 },
   { name: "Curro",  color: "#808080", stat: 1 },
   { name: "Niko",   color: "#00CCCC", stat: 1 },
-  { name: "Leo",    color: "#FFD700", stat: 1 }
+  { name: "Carlos",   color: "#00CCCC", stat: 1 },
+  { name: "Álvaro G",   color: "#800080", stat: 1 },
+  { name: "Lay",   color: "#800080", stat: 1 },
+  { name: "Leo",    color: "#FFD700", stat: 1 },
+  { name: "Víktor",    color: "#FFD700", stat: 1 },
 ];
 
-// Goles recibidos (orden ASCendente: menos goles recibidos primero)
+
+// Promedio de gol (orden ASCendente: menos goles recibidos primero)
 const keepers = [
-  { name: "Sami",    color: "#808080", stat: 1 },
-  { name: "Adri",    color: "#00CCCC", stat: 1 },
   { name: "Antonio", color: "#FFD700", stat: 2 },
-  { name: "Fran",    color: "#800080", stat: 8 }
+  { name: "Adri",    color: "#00CCCC", stat: 4 },
+  { name: "Sami",    color: "#808080", stat: 5 },
+  { name: "Fran",    color: "#800080", stat: 11 }
 ];
 
 // Tarjetas amarillas (orden descendente)
 const yellowCards = [
   { name: "Fran", color: "#800080", stat: 1 },
+  { name: "Sami",    color: "#808080", stat: 1 },
   { name: "Raul", color: "#800080", stat: 1 }
 ];
 // —– Hasta aquí —––
